@@ -1,6 +1,3 @@
-TODO for 0.5 (Next release, technical)
-* Clean up DatabaseInfo class
-
 TODO for 1.0 (Stable PGN-based version)
 * GameView
 	- display custom tags in GameView
@@ -20,19 +17,16 @@ TODO for 2.0 (Stable Native-based version)
 * Native database format
 * Game sorting
 * Spellchecking
-* Playing/training against engine
 * Annotation/Blunder check
 * Tournament tables
 * ELO rating calculation
 * ECO Browser
 
+TODO - Refactoring needed
+* Game class
+* Mainwindow class
 
 TODO - Ideas/Suggestions. Non critical
-* Ideas for database switching.
-	- Database window like Scid
-	- Dockable toolbar with a tool button for each database (My favourite idea)
-	- Tab bar with a tab for each database
-* Format for electronic books
 * Format for exercises, tactics/endgmae training etc.
 * Faster PGN parser
 * Detecting duplicate games
